syntax = "proto3";

package pb;

option go_package = "ordersystem/internal/infra/grpc/pb";

message Order {
  string id = 1;
  double price = 2;
  double tax = 3;
  double final_price = 4;
}

message OrderList {
  repeated Order orders = 1;
}

service OrderService {
  rpc ListOrders (Empty) returns (OrderList);
}

message Empty {}
